# FFMPEG-SAMPLE

./: .gitignore  NOTE.md  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/audio/: 3.wma
app/src/main/assets/shader/: base_vertex.glsl  show_fragment.glsl  yuv_fragment.glsl
app/src/main/cpp/: FFJni.cpp
app/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  AvPacketQueue.cpp  AvPacketQueue.h  BaseDecoder.cpp  BaseDecoder.h  FFPlayer.cpp  FFPlayer.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/encoder/: FFEncoder.cpp  FFEncoder.h  muxing.cpp  transcode.cpp
app/src/main/cpp/ffmpeg/: androidLog.h  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
app/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  bsf.h  codec.h  codec_par.h  mediacodec.h  packet.h  videotoolbox.h
app/src/main/cpp/include/libavfilter/: avfilter.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: buffer.h  (+18 more)
app/src/main/cpp/render/: FFRender.cpp
app/src/main/cpp/tool/: AudioMixer.cpp  AudioMixer.h
app/src/main/cpp/util/: FFUtil.cpp  Locker.cpp  Locker.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h
app/src/main/res/layout/: activity_audio_mixer.xml  activity_cmd.xml  activity_coordinator.xml  activity_main.xml  activity_player.xml  activity_transcode.xml  activtiy_extract_frames.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+90 files in other folders)
